data/derived/comb/progs/unify/prog2235.ml.out
Characters 74-76:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a but an expression was expected of type
         ('a -> int) list
       The type variable 'a occurs inside ('a -> int) list
